--- a/flutter_awesome_loading_button/pubspec.yaml
+++ b/flutter_awesome_loading_button/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_awesome_loading_button
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+repository: https://github.com/yunior123/flutter_awesome_loading_button
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
@@ -13,8 +13,6 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  integration_test:
     sdk: flutter
   flutter_lints: ^1.0.0
 
